# opencv-study

./: .gitignore  CMakeLists.txt  bbuild.sh  create.sh  readme.md
basic/: CMakeLists.txt  basic.cpp
convert_grayscale/: CMakeLists.txt  convert_grayscale.cpp  readme.md
detect_color1/: CMakeLists.txt  detect_color1.cpp  readme.md
detect_color2/: CMakeLists.txt  detect_color2.cpp  readme.md
detection/: CMakeLists.txt  detection.cpp
helloworld/: CMakeLists.txt  helloworld.cpp
histogram1/: CMakeLists.txt  histogram1.cpp  readme.md
scripts/: color_filter_slider.py
simple_filter/: CMakeLists.txt  readme.md  simple_filter.cpp
